# material-viewer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  materialviewer
include/: zstd.h
include/glad/: glad.h
materialviewer.AppDir/: .DirIcon  AppRun  materialviewer.desktop
materialviewer.AppDir/src/environments/industrial_sunset_puresky/: link.txt
materialviewer.AppDir/src/environments/kloppenheim_02_puresky/: link.txt
materialviewer.AppDir/src/shaders/: brdf.frag  cubemap.frag  irradiance.frag  main.frag  main.vert  prefilter.frag  ui.frag
materialviewer.AppDir/usr/lib/: ld-linux-x86-64.so.2  libGL.so.1  libGLX.so.0  libGLdispatch.so.0  libX11.so.6  libXau.so.6  libXdmcp.so.6  libbrotlicommon.so.1  libbrotlidec.so.1  libbz2.so.1.0  libc.so.6  libdouble-conversion.so.3  libfreetype.so.6  libgcc_s.so.1  libglfw.so.3  libglib-2.0.so.0  libgraphite2.so.3  libharfbuzz.so.0  libicui18n.so.75  libicuuc.so.75  liblzma.so.5  libm.so.6  libmd4c.so.0  libpcre2-16.so.0  libpcre2-8.so.0  libpng16.so.16  libxcb.so.1  libz.so.1  libzip.so.5  libzstd.so.1
scripts/: create-linux-appimage.sh  create-macos-app.sh  create-macos-dmg.sh  create-windows-dist.bat  embed_resources.py
src/: generate_embeddings.py  glad.c  main.cpp  target_embeddings.json
src/environments/snowy_forest/: link.txt
src/environments/syferfontein_1d_clear_puresky/: link.txt
src/resources/: materialviewer.rc
src/shaders/: brdf.vert  irradiance.frag  irradiance.vert  main.frag  main.vert  sky.frag  text.frag  ui.frag  ui.vert  vertex.glsl
